add horsing around

--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
                 <li>Or this:  </li>
             </ul>
         </ol>
+        <div>
+            <audio controls>
+                <source src="https://www.w3schools.com/html/horse.ogg" type="audio/ogg">
+                <source src="https://www.w3schools.com/html/horse.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+            </audio>
+            <h1>DO NOT CLICK!!</h1>
+            <img class="sneaky" src="./5a35abb2aad285.9740057115134668026997.png" alt="a small horse">
+        </div>
         <div class="grid-container">
             <div class="grid-item1">Beans In =></div>
             <div class="grid-item2">to the grinder</div>
